--- a/index.html
+++ b/index.html
@@ -32,16 +32,13 @@
                 </div>
                 <div class="col-sm-3">
                     <button id="get_pictures" class="btn btn-default btn-primary disabled">Get Pictures</button>
-                    <!-- <a href="#" id="blob">Download Images</a> -->
+                    <button id="download" class="btn btn-default btn-primary">Download</button>
+                    <a href="#" id="blob">Download Images</a>
                 </div>
             </div></div>
         </div>
         <div class="row">
-            <div class="col-sm-12">
-                <table id="pictures">
-                    <tbody>
-                    </tbody>
-                </table>
+            <div id="pictures" class="col-sm-12">
             </div>
         </div>
     </div>
