facebook loading css UI added

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>FB Photo Dwnldr</title>
@@ -5,6 +6,7 @@
     <link rel="stylesheet" href="css/daterangepicker.css">
     <link rel="stylesheet" href="lib/chosen/chosen.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/facebook-loading.css">
 </head>
 <body>
     <div id="fb-root"></div>
@@ -49,6 +51,15 @@
         </div>
         <div class="row">
             <div id="pictures" class="col-sm-12">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2 center">
+                <div id="facebookG" class="hidden">
+                    <div id="blockG_1" class="facebook_blockG"></div>
+                    <div id="blockG_2" class="facebook_blockG"></div>
+                    <div id="blockG_3" class="facebook_blockG"></div>
+                </div>
             </div>
         </div>
     </div>
