--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="row">
             <div class="progress progress-striped active hidden">
-              <div id="progressbar" class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
+              <div id="progressbar" class="progress-bar"  role="progressbar" aria-valuemin="0" aria-valuemax="100">
                 <!-- <span class="sr-only">0% Complete</span> -->
               </div>
             </div>
@@ -74,6 +74,7 @@
         }(document));
     </script>
     <script src="js/jquery-2.0.3.js"></script>
+    <script src="lib/fb.js"></script>
     <script src="lib/moment.js"></script>
     <script src="js/main.js"></script>
     <script src="lib/chosen/chosen.jquery.js"></script>
