move into libraries

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             ref.parentNode.insertBefore(js, ref);
         }(document));
     </script>
-    <script src="js/jquery-2.0.3.js"></script>
+    <script src="lib/jquery-2.0.3.js"></script>
     <script src="lib/moment.js"></script>
     <script src="js/main.js"></script>
     <script src="lib/chosen/chosen.jquery.js"></script>
